demos/deployment/alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: localhost:5000/alpine
        command:
        - sh
        - -c
        - "while true; do sleep 1; done"
        ports:
        - containerPort: 8080
