demos/deployment/deploy-demo.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-demo
  template:
    metadata:
      labels:
        app: deploy-demo
    spec:
      containers:
      - name: deploy-demo
        image: python:2
        command:
        - sh
        - -c
        - |
          cd /tmp
          python --version 2>&1 > python_version
          python -m SimpleHTTPServer 8080
