demos/deployment/deploy-demo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: deploy-demo
spec:
  selector:
    app: deploy-demo
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
