demos/deployment/deploy-demo.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deploy-demo
spec:
  rules:
    - host: deploy.minikube.info
      http:
        paths:
          - backend:
              serviceName: deploy-demo
              servicePort: 8080
